[package]
name = "onion-udp"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
chacha20poly1305 = "0.10.1"
rand = "0.9.2"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["net", "time", "rt"] }
bincode = { version = "2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
x25519-dalek = "2"

[dev-dependencies]
tokio-test = "0.4.4"
